# rustot

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
documentation/: provisioning.drawio  stack.drawio
examples/: device_advisor.rs  linux.rs  ota.rs  provisioning.rs
examples/common/: clock.rs  credentials.rs  file_handler.rs  mod.rs  network.rs  timer.rs
examples/provisioning_infrastructure/: claim_policy.json  full_iot_policy.json  pre_provision_lambda.js
examples/secrets/: .gitignore  identity.pfx
rustot_derive/: Cargo.toml
rustot_derive/src/: lib.rs  transform.rs
rustot_derive/src/attr/: field_attr.rs  mod.rs  shadow_attr.rs
rustot_derive/src/codegen/: adjacently_tagged.rs  enum_codegen.rs  helpers.rs  kv_codegen.rs  mod.rs  shadow_node_impl.rs  shadow_patch_impl.rs  shadow_state_impl.rs  struct_codegen.rs  type_def.rs
rustot_derive/src/shadow/: mod.rs  shadow_patch.rs
rustot_derive/src/shadow/generation/: generator.rs  mod.rs  modifier.rs  variant_or_field_visitor.rs
rustot_derive/src/types/: mod.rs  option.rs  primitive.rs
rustot_derive/tests/: shadow.rs
scripts/: cleanup_ota.sh  create_ota.sh  register.sh
shadow_derive/: Cargo.toml
shadow_derive/src/: lib.rs
src/: fmt.rs  lib.rs
src/commands/: README.md  data_types.rs  error.rs  mod.rs  stream.rs  topics.rs  update.rs
src/defender_metrics/: README.md  aws_types.rs  data_types.rs  errors.rs  mod.rs  topics.rs
src/job/: data_types.rs  mod.rs
src/jobs/: README.md  agent.rs  data_types.rs  describe.rs  get_pending.rs  mod.rs  start_next.rs  stream.rs  subscribe.rs  temp.rs  unsubscribe.rs  update.rs
src/mqtt/: embedded.rs  greengrass.rs  mock.rs  mod.rs  mqttrust.rs  rumqttc.rs
src/ota/: agent.rs  builder.rs  callback.rs  cbor.rs  config.rs  error.rs  logging.rs  mod.rs  ota.rs  pal.rs  state.rs  status_details.rs
src/ota/control_interface/: mod.rs  mqtt.rs
src/ota/data_interface/: http.rs  mod.rs  mqtt.rs
src/ota/encoding/: cbor.rs  json.rs  mod.rs
src/ota/test/: mock.rs  mod.rs
src/provisioning/: README.md  data_types.rs  error.rs  mod.rs  topics.rs
src/shadows/: README.md  alloc_impl.rs  commit.rs  dao.rs  data_types.rs  error.rs  hash.rs  kv_shadow.rs  migration.rs  mod.rs  opaque.rs  tag_scanner.rs  topics.rs
src/shadows/impls/: heapless_impls.rs  mod.rs  opaque.rs  std_impls.rs
src/shadows/kv_store/: file.rs  mod.rs  no_persist.rs  sequential.rs
src/shadows/multi/: error.rs  manager.rs  mod.rs
src/shadows/scan/: mod.rs  tagged_json.rs
src/shadows/shadow/: cloud.rs  mod.rs  tests.rs
src/shadows/shadow_diff/: _impl.rs  mod.rs
src/shadows/shadow_patch/: _impl.rs  mod.rs
src/shadows/store/: file.rs  in_memory.rs  mod.rs  sequential.rs
src/test/: mod.rs
src/transfer/: README.md  error.rs  mod.rs  pal.rs  status_details.rs
src/transfer/control_interface/: mod.rs  mqtt.rs
src/transfer/data_interface/: http.rs  mod.rs  mqtt.rs
src/transfer/encoding/: afr_ota.rs  cbor.rs  json.rs  mod.rs
tests/: README.md  commands.rs  externally_tagged_enum.rs  metric.rs  ota.rs  ota_http.rs  ota_mqtt.rs  provisioning.rs  shadows.rs
tests/common/: aws_commands.rs  aws_ota.rs  clock.rs  credentials.rs  file_handler.rs  mod.rs  network.rs
tests/provisioning_infrastructure/: claim_policy.json  provision_template_name.json
tests/secrets/: .gitignore  certificate.id  claim_certificate.id  claim_identity.pfx  identity.pfx  sign_private.pem  sign_public.pem
