[workspace]
members = ["rustot_derive"]

[package]
name = "rustot"
version = "0.5.0"
authors = ["Factbird team <support@factbird.com>"]
description = "AWS IoT"
readme = "README.md"
keywords = ["iot", "no-std"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FactbirdHQ/rustot"
edition = "2021"
documentation = "https://docs.rs/rustot"
exclude = ["/documentation"]

[lib]
name = "rustot"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitmaps = { version = "3.1", default-features = false }
heapless = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

minicbor = { version = "0.25", optional = true }
minicbor-serde = { version = "0.3.2", optional = true }

# Shadow storage dependencies
postcard = { version = "1.1", default-features = false, features = ["experimental-derive"] }

# KV-based shadow storage (optional, enabled by shadows_kv_persist feature)
sequential-storage = { version = "7.0", features = ["heapless-09"], optional = true }

serde-json-core = { version = "0.6" }
rustot-derive = { path = "rustot_derive", version = "0.2.1" }
embedded-storage-async = "0.4"
mqttrust = { git = "https://github.com/FactbirdHQ/mqttrust", rev = "6c33c59" }

futures = { version = "0.3.28", default-features = false }

embassy-time = { version = "0.5.0" }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"

log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }
bon = { version = "3.3.2", default-features = false }

# std feature dependencies (for FileKVStore)
tokio = { version = "1", features = ["fs", "io-util", "sync"], optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
native-tls = { version = "0.2" }
embedded-nal-async = "0.9"
env_logger = "0.11"
sha2 = "0.10.1"
static_cell = { version = "2", features = ["nightly"] }
log = { version = "0.4" }
serde_json = "1"

tokio = { version = "1.33", default-features = false, features = [
    "macros",
    "rt",
    "net",
    "time",
    "io-std",
] }
tokio-native-tls = { version = "0.3.1" }
embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5", features = ["log", "std", "generic-queue-8"] }
embedded-io-adapters = { version = "0.7.0", features = ["tokio-1"] }

ecdsa = { version = "0.16", features = ["pkcs8", "pem"] }
p256 = "0.13"
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
hex = { version = "0.4.3", features = ["alloc"] }


[features]
default = ["ota_mqtt_data", "metric_cbor", "provision_cbor", "shadows_kv_persist"]

metric_cbor = ["dep:minicbor", "dep:minicbor-serde"]

provision_cbor = ["dep:minicbor", "dep:minicbor-serde"]

ota_mqtt_data = ["dep:minicbor", "dep:minicbor-serde"]

ota_http_data = []

std = ["serde/std", "minicbor-serde?/std", "dep:tokio", "dep:serde_json", "dep:base64", "postcard/alloc"]

# Field-level KV shadow persistence (SequentialKVStore, FileKVStore)
# Enables KVStore trait, KVPersist trait, and KV-based StateStore implementations
shadows_kv_persist = ["dep:sequential-storage", "rustot-derive/kv_persist", "postcard/heapless"]

defmt = [
    "dep:defmt",
    "heapless/defmt",
    "mqttrust/defmt",
    "embassy-time/defmt",
]
log = ["dep:log", "mqttrust/log"]


# [patch."ssh://git@github.com/FactbirdHQ/mqttrust"]
# mqttrust = { path = "../mqttrust" }

[patch.crates-io]
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core", rev = "a435f78" }
