[package]
name = "rustot-derive"
version = "0.2.1"
authors = ["Factbird team <support@factbird.com>"]
description = "Procedual macros for rustot crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/FactbirdHQ/rustot"
edition = "2021"
readme = "../README.md"

[lib]
proc-macro = true

[features]
default = []
# Enable KVPersist impl generation in derive macros
kv_persist = []

[dependencies]
syn = { version = "2", features = ["extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
heck = "0.5"
darling = "0.20"

[dev-dependencies]
serde = "1"
heapless = "0.8"
